--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 h1 {
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.07;
+  line-height: 0.02em;
   text-align: center;
   color: #ffffff;
 }
@@ -53,6 +53,7 @@ h3 {
 .address-list .link {
   color: #434455;
   text-decoration: none;
+  font-style: normal;
 }
 
 .address-list .link:hover,
@@ -66,13 +67,23 @@ h3 {
 
 .order-service .order {
   cursor: pointer;
-  color: #4d5ae5;
+  color: #ffffff;
   font-weight: 500;
-  letter-spacing: 4%;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   background-color: #4d5ae5;
 }
 
-.order-service .order:hover,
+.order-service .order:hover {
+  background-color: #404bbf;
+}
+
 .order-service .order:focus {
-  color: #404bbf;
+  background-color: #404bbf;
+}
+
+.visually-hidden {
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
