--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,44 @@ h3 {
   background-color: #404bbf;
 }
 
-.visually-hidden {
+.advan .exp {
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.team {
+  background-color: #f4f4fd;
+}
+
+.team .our-team {
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+
+.team .our-team .compo {
+  background-color: #ffffff;
+}
+
+.team .our-team .compo .name {
+  line-height: 1.2;
+}
+
+.team .our-team .compo .descp {
+  font-size: 16px;
+}
+
+.portfolio .dignit {
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+.portfolio .allowa {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
