--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ h1 {
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.02em;
   color: #ffffff;
 }
 
@@ -39,7 +39,7 @@ h3 {
   font-size: 20px;
 }
 
-.nav-list {
+.nav-list .link {
   font-weight: 500;
   color: #2e2f42;
   text-decoration: none;
@@ -71,7 +71,7 @@ h3 {
   color: #ffffff;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.04em;
   background-color: #4d5ae5;
 }
 
