--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ h3 {
   text-decoration: none;
 }
 
-.address-list .link {
+.address-list {
   color: #434455;
   text-decoration: none;
   font-style: normal;
